--- a/src/components/Content/ProductList/ProductList.module.scss
+++ b/src/components/Content/ProductList/ProductList.module.scss
@@ -36,14 +36,11 @@
       justify-content: space-evenly;
       align-items: center;
       text-align: center;
-    }
 
-    .booksAuthor {
-      opacity: 70%;
-      font-size: 2.5vw;
-    }
-    &:hover {
-      box-shadow: 0px 0px 5px 5px #ffffff66(255, 255, 255, 255);
+      .booksAuthor {
+        opacity: 70%;
+        font-size: 2.5vw;
+      }
     }
   }
   .moreItemsButtonContainer {
@@ -59,8 +56,10 @@
     .productList {
       width: 40%;
       font-size: 2vw;
-      .booksAuthor {
-        font-size: 1.8vw;
+      .productInfo{
+        .booksAuthor {
+          font-size: 1.8vw;
+        }
       }
     }
   }
@@ -70,8 +69,10 @@
     .productList {
       width: 25%;
       font-size: 2vw;
-      .booksAuthor {
-        font-size: 1.8vw;
+      .productInfo {
+        .booksAuthor {
+          font-size: 1.6vw;
+        }
       }
     }
   }
@@ -79,8 +80,10 @@
 @media screen and (min-width: 650px) {
   .productListСontainer {
     .productList {
-      .booksAuthor {
-        font-size: 1.7vw;
+      .productInfo {
+        .booksAuthor {
+          font-size: 1.5vw;
+        }
       }
     }
   }
@@ -90,8 +93,11 @@
     .productList {
       width: 18%;
       font-size: 1.1vw;
-      .booksAuthor {
-        font-size: 1vw;
+      .productInfo {
+        .booksAuthor {
+          font-size: 1.1vw;
+        }
+
       }
     }
   }
@@ -101,8 +107,10 @@
     .productList {
       width: 15%;
       font-size: 1.1vw;
-      .booksAuthor {
-        font-size: 1vw;
+      .productInfo {
+        .booksAuthor {
+          font-size: 1vw;
+        }
       }
     }
   }
@@ -116,17 +124,15 @@
         .favorites_button_container {
           display: none;
         }
-
       }
-
-      .booksAuthor {
-        font-size: 0.9vw;
+      .productInfo {
+        .booksAuthor {
+          font-size: 0.9vw;
+        }
+        .productButtonContainer {
+          display: none;
+        }
       }
-
-      .productButtonContainer {
-        display: none;
-      }
-
       &:hover {
         .favorites_button_container {
           display: flex;
