--- a/src/components/Layout/FixedMenu/FixedMenu.module.scss
+++ b/src/components/Layout/FixedMenu/FixedMenu.module.scss
@@ -48,7 +48,6 @@
   .FixedMenuLinkHomeActive {
     position: relative;
     z-index: 4;
-    
     &::before {
       content: "";
       background-image: url("../../../logo/pngwing.com (1) (1).png");
@@ -144,7 +143,7 @@
     z-index: 4;
     &::before {
       content: "";
-      background-image: url("../../../logo/user.png");
+      background-image: url("../../../logo/user (1).png");
       background-repeat: no-repeat;
       background-size: 20px, 20px;
       display: block;
