--- a/src/components/Content/Registration/Registration.module.scss
+++ b/src/components/Content/Registration/Registration.module.scss
@@ -38,7 +38,7 @@
           width: 15%;
         }
         .input {
-          // width: 95%;
+          width: 95%;
           padding: 8px;
           border: none;
           outline: none;
@@ -156,7 +156,7 @@
       .signUp_form {
         .inputBlock {
           .input {
-            padding: 0;
+            padding: 6px;
           }
           padding: 2px;
         }
