--- a/src/components/Content/SelectedProducts/SelectedProductsList.module.scss
+++ b/src/components/Content/SelectedProducts/SelectedProductsList.module.scss
@@ -1,11 +1,9 @@
 .productListСontainer {
-  min-height: 80vh;
+  min-height: 70vh;
   display: flex;
   width: 100%;
-  height: 100%;
   justify-content: center;
   flex-wrap: wrap;
-  align-items: center;
 
   .favoritesProductNone {
     display: none;
@@ -13,10 +11,16 @@
   .favoritesProductZero {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    min-height: 20vh;
     font-size: 2vw;
+    div {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      text-align: center;
+      min-height: 30%;
+    }
     p {
       color: #868695;
     }
@@ -25,6 +29,7 @@
     }
   }
   .productList {
+    max-height: 47vh;
     width: 45%;
     display: flex;
     flex-direction: column;
@@ -40,6 +45,7 @@
     .productImageContainer {
       width: 80%;
       position: relative;
+      background-color: red;
       .productImage {
         width: 100%;
       }
@@ -61,7 +67,6 @@
         font-size: 2.5vw;
       }
     }
-
   }
 }
 
@@ -81,6 +86,7 @@
 @media screen and (min-width: 500px) {
   .productListСontainer {
     .productList {
+      max-height: 20vh;
       width: 25%;
       font-size: 2vw;
       .productInfo {
@@ -94,6 +100,7 @@
 @media screen and (min-width: 650px) {
   .productListСontainer {
     .productList {
+      max-height: 30vh;
       .productInfo {
         .booksAuthor {
           font-size: 1.7vw;
@@ -105,6 +112,7 @@
 @media screen and (min-width: 800px) {
   .productListСontainer {
     .productList {
+      max-height: 26vh;
       width: 18%;
       font-size: 1.1vw;
       .productInfo {
@@ -125,6 +133,7 @@
       font-size: 1.5vw;
     }
     .productList {
+      max-height: 31vh;
       font-size: 1.1vw;
       .productInfo {
         .booksAuthor {
@@ -137,6 +146,7 @@
 @media screen and (min-width: 1280px) {
   .productListСontainer {
     .productList {
+      max-height: 47vh;
       width: 15%;
       font-size: 0.9vw;
       .productImageContainer {
