--- a/src/components/Content/Basket/Basket.module.scss
+++ b/src/components/Content/Basket/Basket.module.scss
@@ -39,7 +39,7 @@
     .basketProductsBlock {
       background-color: #fff;
       width: 70%;
-      border-radius: 5%;
+      border-radius: 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -66,10 +66,10 @@
           font-size: 1.5vw;
         }
         .itemButtonBlock {
-          width: 10%;
+          width: 15%;
           display: flex;
           justify-content: space-evenly;
-          font-size: 1.8vw;
+          font-size: 2.5vw;
           button {
             border: none;
             background-color: #fff;
@@ -79,7 +79,9 @@
 
         .productDeleteBlock {
           position: absolute;
-          margin-top: -0.3%;
+          display: flex;
+          justify-content: flex-end;
+          align-items: center;
           right: -5%;
 
           button {
@@ -88,8 +90,8 @@
             background-image: url("../../../logo/basket_remove.png");
             background-repeat: no-repeat;
             background-size: 100% 100%;
-            width: 15px;
-            height: 15px;
+            width: 20px;
+            height: 20px;
             display: block;
             cursor: pointer;
           }
@@ -99,10 +101,81 @@
     .basketPayBlock {
       display: flex;
       position: sticky;
+      top: 0;
       background-color: #fff;
       width: 25%;
       max-height: 50vh;
-      border-radius: 5%;
+      border-radius: 20px;
+      justify-content: center;
+      align-items: center;
+      .itemPayInfoBlock {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 85%;
+        height: 85%;
+        .cityTextBlock {
+          opacity: 0.5;
+        }
+        .paymentMethodLink {
+          text-decoration: none;
+          color:#164f48;
+        }
+        .deliveryLink {
+          display: flex;
+          justify-content: space-between;
+          text-decoration: none;
+          color: black;
+          &:hover {
+            color: #164f48;
+            background-color: transparent;
+          }
+          &::after {
+            content: "";
+            display: block;
+            background-image: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20fill%3D%22none%22%3E%3Cpath%20fill%3D%22%23BDBDCB%22%20fill-rule%3D%22evenodd%22%20d%3D%22M12.407.258a.89.89%200%200%201%201.253%200l2.08%202.08a.885.885%200%200%201%200%201.253l-1.627%201.626-3.332-3.333L12.407.258ZM0%2012.665l9.83-9.83%203.333%203.333-9.83%209.83H0v-3.333Z%22%20clip-rule%3D%22evenodd%22%2F%3E%3C%2Fsvg%3E);
+            background-repeat: no-repeat;
+            background-size: 15px 15px;
+            width: 15px;
+            height: 15px;
+          }
+        }
+        div {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+        }
+        button {
+          width: 100%;
+          padding: 2%;
+          background-color: #164f48;
+          color: #fff;
+          border: none;
+          border-radius: 5px;
+          cursor: pointer;
+        }
+        .inputCheckboxContainer {
+          display: flex;
+          justify-content: space-around;
+          .linkAgreement {
+            display: flex;
+            justify-content: space-between;
+            text-decoration: none;
+            color: black;
+            &:hover {
+              color: #164f48;
+            }
+            &::before {
+              content: "";
+              background-image: url("../../../logo/Tick_Mark_icon-icons.com_69146.png");
+              background-repeat: no-repeat;
+              background-size: 15px 15px;
+              width: 25px;
+              height: 25px;
+            }
+          }
+        }
+      }
     }
   }
   .basketWrapperNone {
@@ -113,8 +186,11 @@
 @media screen and (max-width: 1054px) {
   .basketZeroWrapper {
     .basketWrapper {
+      flex-direction: column;
+      align-items: center;
+      
       .basketProductsBlock {
-        width: 80%;
+        width: 90%;
         .basketProductsList {
           width: 90%;
           .productImg {
@@ -125,21 +201,24 @@
           }
           .itemButtonBlock {
             width: 25%;
-            font-size: 3vw;
           }
-          
+
           .productDeleteBlock {
-            margin-top: -0.5%;
             button {
-              background-size: 100% 100%;
-              width: 20px;
-              height: 20px;
             }
           }
         }
       }
       .basketPayBlock {
-        display: none;
+        min-height: 40vh;
+        width: 90%;
+        padding: 1% 0 1% 0;
+        margin-top: 3%;
+        .itemPayInfoBlock {
+          min-height: 40vh;
+          width: 95%;
+          justify-content: space-between;
+        }
       }
     }
   }
@@ -154,8 +233,10 @@
           .itemInfoBloc {
             font-size: 2.5vw;
           }
+          .itemButtonBlock {
+            font-size: 3vw;
+          }
           .productDeleteBlock {
-            margin-top: -1%;
           }
         }
       }
@@ -168,15 +249,42 @@
     .basketWrapper {
       .basketProductsBlock {
         .basketProductsList {
+          .itemButtonBlock {
+            font-size: 5vw;
+          }
           .productDeleteBlock {
-            margin-top: 0;
             button {
-              width: 18px;
-              height: 18px;
+              width: 17px;
+              height: 17px;
             }
           }
         }
       }
+
+    }
+  }
+}
+@media screen and (max-width: 600px) {
+  .basketZeroWrapper {
+    .basketWrapper {
+      .basketProductsBlock {
+        .basketProductsList {
+          .itemButtonBlock {
+          }
+          .productDeleteBlock {
+            button {
+            }
+          }
+        }
+      }
+      .basketPayBlock {
+        min-height: 30vh;
+        .itemPayInfoBlock {
+          font-size: 3vw;
+          min-height: 30vh;
+        }
+      }
+
     }
   }
 }
