--- a/src/components/Layout/FixedMenu/FixedMenu.module.scss
+++ b/src/components/Layout/FixedMenu/FixedMenu.module.scss
@@ -7,7 +7,6 @@
   background-color: #fff;
   padding-top: 3px;
 
-
   .menuActive {
     display: block;
     left: 0;
@@ -17,9 +16,8 @@
     height: 100%;
     width: 100%;
     background-color: white;
-    top:0;
+    top: 0;
     z-index: 3;
-
   }
   .menuNone {
     display: block;
@@ -37,25 +35,15 @@
     z-index: 4;
     &::before {
       content: "";
-      background-image: url("../../../logo/pngwing.com (1).png");
+      background-image: url("../../../logo/menuHome.png");
       background-repeat: no-repeat;
-      background-size: 20px, 20px;
+      background-size: 40px, 40px;
       display: block;
-      width: 40px;
-      height: 40px;
+      width: 20px;
+      height: 20px;
     }
-  }
-  .FixedMenuLinkHomeActive {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/pngwing.com (1) (1).png");
-      background-repeat: no-repeat;
-      background-size: 20px, 20px;
-      display: block;
-      width: 40px;
-      height: 40px;
+    &:focus::before {
+      background-position-x: 100%;
     }
   }
   .FixedMenuButtonMenu {
@@ -65,12 +53,15 @@
     border: none;
     &::before {
       content: "";
-      background-image: url("../../../logo/menu (3).png");
+      background-image: url("../../../logo/menuButton.png");
       background-repeat: no-repeat;
-      background-size: 20px, 20px;
+      background-size: 40px, 40px;
       display: block;
-      width: 40px;
-      height: 40px;
+      width: 20px;
+      height: 20px;
+    }
+    &:focus::before {
+      background-position-x: 100%;
     }
   }
   .FixedMenuLinkBasket {
@@ -78,25 +69,15 @@
     z-index: 4;
     &::before {
       content: "";
-      background-image: url("../../../logo/basket2.png");
+      background-image: url("../../../logo/menuBasket (1).png");
       background-repeat: no-repeat;
-      background-size: 20px, 20px;
+      background-size: 40px, 40px;
       display: block;
-      width: 40px;
-      height: 40px;
+      width: 20px;
+      height: 20px;
     }
-  }
-  .FixedMenuLinkBasketActive {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/basket2.png");
-      background-repeat: no-repeat;
-      background-size: 20px, 20px;
-      display: block;
-      width: 40px;
-      height: 40px;
+    &:focus::before {
+      background-position-x: 100%;
     }
   }
   .FixedMenuLinkSelected {
@@ -104,25 +85,15 @@
     z-index: 4;
     &::before {
       content: "";
-      background-image: url("../../../logo/pngwing.com (2).png");
+      background-image: url("../../../logo/favorite\ \(2\).png");
       background-repeat: no-repeat;
-      background-size: 20px, 20px;
+      background-size: 40px, 40px;
       display: block;
-      width: 40px;
-      height: 40px;
+      width: 20px;
+      height: 20px;
     }
-  }
-  .FixedMenuLinkSelectedActive {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/pngwing.com (2) (2).png");
-      background-repeat: no-repeat;
-      background-size: 20px, 20px;
-      display: block;
-      width: 40px;
-      height: 40px;
+    &:focus::before {
+      background-position-x: 100%;
     }
   }
   .FixedMenuLinkPersonalAccount {
@@ -130,25 +101,15 @@
     z-index: 4;
     &::before {
       content: "";
-      background-image: url("../../../logo/user.png");
+      background-image: url("../../../logo/menuPersonalOffice.png");
       background-repeat: no-repeat;
-      background-size: 20px, 20px;
+      background-size: 40px, 40px;
       display: block;
-      width: 40px;
-      height: 40px;
+      width: 20px;
+      height: 20px;
     }
-  }
-  .FixedMenuLinkPersonalAccountActive {
-    position: relative;
-    z-index: 4;
-    &::before {
-      content: "";
-      background-image: url("../../../logo/user (1).png");
-      background-repeat: no-repeat;
-      background-size: 20px, 20px;
-      display: block;
-      width: 40px;
-      height: 40px;
+    &:focus::before {
+      background-position-x: 100%;
     }
   }
 }
