--- a/src/components/Layout/FixedMenu/FixedMenu.module.scss
+++ b/src/components/Layout/FixedMenu/FixedMenu.module.scss
@@ -42,7 +42,18 @@
       width: 20px;
       height: 20px;
     }
-    &:focus::before {
+  }
+  .FixedMenuLinkHomeActive {
+    position: relative;
+    z-index: 4;
+    &::before {
+      content: "";
+      background-image: url("../../../logo/menuHome.png");
+      background-repeat: no-repeat;
+      background-size: 40px, 40px;
+      display: block;
+      width: 20px;
+      height: 20px;
       background-position-x: 100%;
     }
   }
@@ -60,7 +71,20 @@
       width: 20px;
       height: 20px;
     }
-    &:focus::before {
+  }
+  .FixedMenuButtonMenuActive {
+    position: relative;
+    z-index: 4;
+    background-color: #fff;
+    border: none;
+    &::before {
+      content: "";
+      background-image: url("../../../logo/menuButton.png");
+      background-repeat: no-repeat;
+      background-size: 40px, 40px;
+      display: block;
+      width: 20px;
+      height: 20px;
       background-position-x: 100%;
     }
   }
@@ -76,7 +100,18 @@
       width: 20px;
       height: 20px;
     }
-    &:focus::before {
+  }
+  .FixedMenuLinkBasketActive {
+    position: relative;
+    z-index: 4;
+    &::before {
+      content: "";
+      background-image: url("../../../logo/menuBasket (1).png");
+      background-repeat: no-repeat;
+      background-size: 40px, 40px;
+      display: block;
+      width: 20px;
+      height: 20px;
       background-position-x: 100%;
     }
   }
@@ -92,7 +127,18 @@
       width: 20px;
       height: 20px;
     }
-    &:focus::before {
+  }
+  .FixedMenuLinkSelectedActive {
+    position: relative;
+    z-index: 4;
+    &::before {
+      content: "";
+      background-image: url("../../../logo/favorite\ \(2\).png");
+      background-repeat: no-repeat;
+      background-size: 40px, 40px;
+      display: block;
+      width: 20px;
+      height: 20px;
       background-position-x: 100%;
     }
   }
@@ -108,7 +154,18 @@
       width: 20px;
       height: 20px;
     }
-    &:focus::before {
+  }
+  .FixedMenuLinkPersonalAccountActive {
+    position: relative;
+    z-index: 4;
+    &::before {
+      content: "";
+      background-image: url("../../../logo/menuPersonalOffice.png");
+      background-repeat: no-repeat;
+      background-size: 40px, 40px;
+      display: block;
+      width: 20px;
+      height: 20px;
       background-position-x: 100%;
     }
   }
