Настроил форму с данными покупателя, и адресом доставки. Для ввода адреса, и имя пользователя подключил компоненты из библиотеки react-dadata

--- a/src/components/Content/Basket/Basket.module.scss
+++ b/src/components/Content/Basket/Basket.module.scss
@@ -139,6 +139,9 @@
             width: 15px;
             height: 15px;
           }
+          &:hover {
+            filter: sepia(2) hue-rotate(79deg) saturate(4);
+          }
         }
         div {
           width: 100%;
