--- a/src/components/Content/Form/Form.module.scss
+++ b/src/components/Content/Form/Form.module.scss
@@ -1,37 +1,107 @@
-.form {
+.form_wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  .form {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
-    width: 100%;
-    margin-top: 5%;
-
+    justify-content: center;
+    padding-bottom: 10px;
+    width: 50%;
+    box-shadow: 2px 2px 5px 5px #164f48;
+    border-radius: 20px;
 
     .elKutbi {
-        font-size: 5vw;
-        color: white;
+      font-size: 5vw;
+      color: black;
     }
 
     .formText {
-        margin: 10px;
-        font-size: 2vw;
-        color: white;
+      margin: 10px;
+      font-size: 2vw;
+      color: black;
     }
 
-    
-    .input {
-        padding: 10px;
-        width: 90%;
-        margin: 10px;
-        border-radius: 10px;
+    .inputContainer {
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+
+      .input {
+        box-sizing: border-box;
+        padding: 5px;
+        width: 100%;
+        margin-top: 2%;
+        border-radius: 5px;
         background-color: white;
         outline: none;
-    }
-    
-    @media screen and (min-width: 740px) {
-        .input {
-            width: 50%;
+
+        &:focus {
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+            0 0 0 3px rgba(0, 124, 214, 0.3);
+          border-color: #007cd6;
         }
-    
-    } 
+      }
+    }
+
+    .error {
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+        0 0 0 3px red (0, 124, 214, 0.3);
+      border-color: red;
+    }
+  }
+  .addressWrapper {
+    box-shadow: 2px 2px 5px 5px #164f48;
+    border-radius: 20px;
+    min-width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .addressBlock {
+      width: 90%;
+      height: 90%;
+      font-size: 2vw;
+    }
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .form_wrapper {
+    width: 100%;
+    .form {
+      width: 100%;
+      box-shadow: none;
+      .formText {
+        margin: 10px;
+        font-size: 3vw;
+        color: black;
+      }
+      .input {
+        width: 60%;
+        padding: 5px;
+        font-size: 2.5vw;
+      }
+      .addressSuggestions {
+        width: 100%;
+      }
+    }
+    .addressWrapper {
+      box-shadow: none;
+      width: 30%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .addressBlock {
+        width: 90%;
+        height: 40%;
+        font-size: 2vw;
+        a {
+          text-decoration: none;
+        }
+      }
+    }
+  }
 }
