--- a/src/pages/FormPage/FormPage.module.scss
+++ b/src/pages/FormPage/FormPage.module.scss
@@ -1,10 +1,13 @@
-.main {
+.formPage {
   background-color: #fff;
   border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  padding: 1%;
 }
 
 @media screen and (max-width: 1024px) {
-  .main {
+  .formPage {
     border-radius: 0;
   }
 }
