--- a/src/components/Content/Form/Form.module.scss
+++ b/src/components/Content/Form/Form.module.scss
@@ -10,7 +10,7 @@
     justify-content: center;
     padding-bottom: 10px;
     width: 50%;
-    box-shadow: 2px 2px 5px 5px #164f48;
+    box-shadow: 2px 2px 5px 5px rgba(148, 126, 126, 0.425);
     border-radius: 20px;
 
     .elKutbi {
@@ -46,24 +46,37 @@
         }
       }
     }
-
-    .error {
-      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-        0 0 0 3px red (0, 124, 214, 0.3);
-      border-color: red;
-    }
   }
   .addressWrapper {
-    box-shadow: 2px 2px 5px 5px #164f48;
+    box-shadow: 2px 2px 5px 5px rgba(148, 126, 126, 0.425);
     border-radius: 20px;
     min-width: 30%;
+    width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 1%;
     .addressBlock {
-      width: 90%;
+      width: 100%;
       height: 90%;
-      font-size: 2vw;
+      font-size: 1vw;
+      a {
+        text-decoration: none;
+      }
+    }
+    .buttonBlock {
+      height: 90%;
+      // width: 5%;
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      a {
+        background-color: #fff;
+        text-decoration: none;
+        cursor: pointer;
+        font-size: 1vw;
+      }
+
     }
   }
 }
@@ -72,7 +85,7 @@
   .form_wrapper {
     width: 100%;
     .form {
-      width: 100%;
+      width: 70%;
       box-shadow: none;
       .formText {
         margin: 10px;
@@ -90,7 +103,8 @@
     }
     .addressWrapper {
       box-shadow: none;
-      width: 30%;
+      width: 50%;
+      height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -98,9 +112,20 @@
         width: 90%;
         height: 40%;
         font-size: 2vw;
+
+      }
+      .buttonBlock {
+        height: 40%;
+        display: flex;
+        align-items: flex-start;
+
         a {
+          background-color: #fff;
           text-decoration: none;
+          cursor: pointer;
+          font-size: 1vw;
         }
+  
       }
     }
   }
