--- a/src/components/Content/Form/Form.module.scss
+++ b/src/components/Content/Form/Form.module.scss
@@ -66,7 +66,6 @@
     }
     .buttonBlock {
       height: 90%;
-      // width: 5%;
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
@@ -87,6 +86,7 @@
     .form {
       width: 70%;
       box-shadow: none;
+      border: none;
       .formText {
         margin: 10px;
         font-size: 3vw;
@@ -123,7 +123,7 @@
           background-color: #fff;
           text-decoration: none;
           cursor: pointer;
-          font-size: 1vw;
+          font-size: 2vw;
         }
   
       }
