--- a/src/components/Content/Login/Login.module.scss
+++ b/src/components/Content/Login/Login.module.scss
@@ -10,19 +10,22 @@
 
   .loginBlock {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    width: 35%;
+    width: 40%;
     height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    border-radius: 20px;
     .login_form {
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
       height: 58%;
-      border-radius: 20px;
+      border: none;
+      width: 91%;
+      
 
       .inputBlock {
         display: flex;
@@ -365,8 +368,8 @@
           padding: 2px;
           .loginMenu {
             top: 48.8%;
-            width: 43%;
-            margin-left: -8%;
+            width: 37%;
+            margin-left: -5%;
             .loginMenuBlock {
               .inputMenuImg {
                 margin-left: 5px;
@@ -380,8 +383,8 @@
             }
           }
           .loginMenuNone {
-            width: 43%;
-            margin-left: -8%;
+            width: 37%;
+            margin-left: -5%;
             top: 48.8%;
             .loginMenuBlock {
               .inputMenuImg {
@@ -518,7 +521,8 @@
         height: 50%;
         .inputBlock {
           .loginMenu {
-            margin-left: -8%;
+            margin-left: -5%;
+            top: 48.5%;
             height: 8%;
             .menuLinkBlock {
               margin-left: 3.5%;
@@ -528,6 +532,8 @@
             }
           }
           .loginMenuNone {
+            margin-left: -5%;
+            top: 48.5%;
             .menuLinkBlock {
               margin-left: 3.5%;
               .linkSigninUp {
@@ -536,6 +542,44 @@
             }
           }
         }
+      }
+    }
+  }
+}
+@media screen and (max-width: 450px) {
+  .loginContainer {
+    .loginBlock {
+      height: 35%;
+      .login_form {
+        height: 50%;
+        .inputBlock {
+          .loginMenu {
+            top: 47.5%;
+            }
+          }
+          .loginMenuNone {
+            top: 47.5%;
+        }
+    
+      }
+    }
+  }
+}
+@media screen and (max-width: 375px) {
+  .loginContainer {
+    .loginBlock {
+      height: 35%;
+      .login_form {
+        height: 50%;
+        .inputBlock {
+          .loginMenu {
+            top: 47%;
+            }
+          }
+          .loginMenuNone {
+            top: 47%;
+        }
+    
       }
     }
   }
