--- a/src/components/Content/PersonalAccount/PersonalAccount.module.scss
+++ b/src/components/Content/PersonalAccount/PersonalAccount.module.scss
@@ -56,7 +56,7 @@
         width: 32%;
 
         .buttonExit {
-        //   font-size: 1.5vw;
+          //   font-size: 1.5vw;
           background-color: #fff;
           border: none;
           cursor: pointer;
@@ -67,106 +67,116 @@
 }
 
 @media screen and (max-width: 1054px) {
-    .wrapperPersonalAccount {
-        .personalAccountBlock {
-            box-shadow: none;
-            flex-direction: column;
-            align-items: center;
-            min-height: 90vh;
-            width: 90%;
-            .personalAccountInfo {
-                padding: 2%;
-                box-shadow: 2px 2px 5px 5px rgba(148, 126, 126, 0.425);
-                border-radius: 20px;
-                width: 90%;
-                font-size: 2vw;
-
+  .wrapperPersonalAccount {
+    .personalAccountBlock {
+      box-shadow: none;
+      flex-direction: column;
+      align-items: center;
+      min-height: 90vh;
+      width: 90%;
+      .personalAccountInfo {
+        padding: 3%;
+        box-shadow: 2px 2px 5px 5px rgba(148, 126, 126, 0.425);
+        border-radius: 20px;
+        width: 90%;
+        font-size: 2vw;
+        .infoHeaderBlock {
+          display: flex;
+          justify-content: space-between;
+          a {
+            background-image: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20fill%3D%22none%22%3E%3Cpath%20fill%3D%22%23BDBDCB%22%20fill-rule%3D%22evenodd%22%20d%3D%22M12.407.258a.89.89%200%200%201%201.253%200l2.08%202.08a.885.885%200%200%201%200%201.253l-1.627%201.626-3.332-3.333L12.407.258ZM0%2012.665l9.83-9.83%203.333%203.333-9.83%209.83H0v-3.333Z%22%20clip-rule%3D%22evenodd%22%2F%3E%3C%2Fsvg%3E);
+            background-repeat: no-repeat;
+            background-size: 13px 13px;
+            width: 13px;
+            height: 13px;
+            &:hover{
+                filter: sepia(2) hue-rotate(79deg) saturate(4);
             }
-            .orderBlock {
-                padding: 2%;
-                box-shadow: 2px 2px 5px 5px rgba(148, 126, 126, 0.425);
-                border-radius: 20px;
-                min-width: 90%;
-                font-size: 2vw;
-                align-items: flex-start;
-    
-            }
-            .settingsBlock {
-                padding: 2%;
-                box-shadow: 2px 2px 5px 5px rgba(148, 126, 126, 0.425);
-                border-radius: 20px;
-                min-width: 90%;
-                font-size: 2vw;
-                align-items: flex-start;
-                .buttonExitContainer {
-                    justify-content: flex-start;
-                }
-            }
+          }
         }
+      }
+      .orderBlock {
+        padding: 3%;
+        box-shadow: 2px 2px 5px 5px rgba(148, 126, 126, 0.425);
+        border-radius: 20px;
+        min-width: 90%;
+        font-size: 2vw;
+        align-items: flex-start;
+      }
+      .settingsBlock {
+        padding: 3%;
+        box-shadow: 2px 2px 5px 5px rgba(148, 126, 126, 0.425);
+        border-radius: 20px;
+        min-width: 90%;
+        font-size: 2vw;
+        align-items: flex-start;
+        .buttonExitContainer {
+          justify-content: flex-start;
+        }
+      }
     }
+  }
 }
 @media screen and (max-width: 950px) {
-    .wrapperPersonalAccount {
-        .personalAccountBlock {
-            min-height: 70vh;
-            .personalAccountInfo {
-                font-size: 2vw;
-            }
-            .orderBlock {
-                font-size: 2vw;
-            }
-            .settingsBlock {
-                font-size: 2vw;
-            }
-        }
+  .wrapperPersonalAccount {
+    .personalAccountBlock {
+      min-height: 70vh;
+      .personalAccountInfo {
+        font-size: 2vw;
+      }
+      .orderBlock {
+        font-size: 2vw;
+      }
+      .settingsBlock {
+        font-size: 2vw;
+      }
     }
+  }
 }
 @media screen and (max-width: 750px) {
-    .wrapperPersonalAccount {
-        .personalAccountBlock {
-            min-height: 60vh;
-        }
+  .wrapperPersonalAccount {
+    .personalAccountBlock {
+      min-height: 60vh;
     }
+  }
 }
 @media screen and (max-width: 650px) {
-    .wrapperPersonalAccount {
-        .personalAccountBlock {
-            min-height: 50vh;
-        }
+  .wrapperPersonalAccount {
+    .personalAccountBlock {
+      min-height: 50vh;
     }
+  }
 }
 @media screen and (max-width: 560px) {
-    .wrapperPersonalAccount {
-        .personalAccountBlock {
-            min-height: 60vh;
-            .personalAccountInfo {
-                font-size: 3vw;
-            }
-            .orderBlock {
-                font-size: 3vw;
-            }
-            .settingsBlock {
-                font-size: 3vw;
-            }
-        }
+  .wrapperPersonalAccount {
+    .personalAccountBlock {
+      min-height: 40vh;
+      .personalAccountInfo {
+        font-size: 3vw;
+      }
+      .orderBlock {
+        font-size: 3vw;
+      }
+      .settingsBlock {
+        font-size: 3vw;
+      }
     }
+  }
 }
 
 @media screen and (max-width: 400px) {
-    .wrapperPersonalAccount {
-        .personalAccountBlock {
-            min-height: 40vh;
-            .personalAccountInfo {
-                font-size: 2.3vw;
-
-            }
-            .orderBlock {
-                font-size: 2.3vw;
-    
-            }
-            .settingsBlock {
-                font-size: 2.5vw;
-            }
-        }
+  .wrapperPersonalAccount {
+    .personalAccountBlock {
+      min-height: 40vh;
+      .personalAccountInfo {
+        font-size: 2.3vw;
+      }
+      .orderBlock {
+        font-size: 2.3vw;
+      }
+      .settingsBlock {
+        font-size: 2.5vw;
+      }
     }
+  }
 }
