--- a/src/components/Content/Registration/Registration.module.scss
+++ b/src/components/Content/Registration/Registration.module.scss
@@ -16,14 +16,15 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    border-radius: 20px;
     .signUp_form {
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
       height: 58%;
-      border-radius: 20px;
-
+      border: none;
+       width: 80%;
       .inputBlock {
         display: flex;
         align-items: center;
@@ -151,8 +152,8 @@
   .signupContainer {
     font-size: 2vw;
     .signUpBlock {
-      width: 55%;
-      height: 40%;
+      width: 70%;
+      height: 50%;
       .signUp_form {
         .inputBlock {
           .input {
@@ -173,6 +174,21 @@
           font-size: 2vw;
         }
       }
+    }
+  }
+}
+@media screen and (max-width: 600px) {
+  .signupContainer {
+    .signUpBlock {
+      width: 65%;
+      height: 40%;
+    }
+  }
+}
+@media screen and (max-width: 450px) {
+  .signupContainer {
+    .signUpBlock {
+      height: 35%;
     }
   }
 }
