--- a/src/components/Content/Basket/Basket.module.scss
+++ b/src/components/Content/Basket/Basket.module.scss
@@ -1,3 +1,14 @@
+.loadingBlock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 70vh;
+  img {
+    width: 20%;
+  }
+}
+
 .basketZeroWrapper {
   min-height: 70vh;
   display: flex;
