--- a/src/components/Content/Login/Login.module.scss
+++ b/src/components/Content/Login/Login.module.scss
@@ -1,3 +1,13 @@
+.loadingBlock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 70vh;
+  img {
+    width: 20%;
+  }
+}
 .loginContainer {
   background-color: #fff;
   display: flex;
