--- a/src/components/Content/Products/ProductsList.module.scss
+++ b/src/components/Content/Products/ProductsList.module.scss
@@ -8,13 +8,14 @@
     width: 20%;
   }
 }
-.booksListСontainer {
+
+.productListСontainer {
   display: flex;
   width: 100%;
   justify-content: center;
   flex-wrap: wrap;
 
-  .booksList {
+  .productList {
     width: 45%;
     display: flex;
     flex-direction: column;
@@ -27,10 +28,10 @@
     border-radius: 5px;
     cursor: pointer;
 
-    .booksImageContainer {
-      width: 80%;
+    .productImageContainer {
       position: relative;
-      .bookImage {
+      width: 80%;
+      .productImage {
         width: 100%;
       }
       display: flex;
@@ -59,13 +60,14 @@
         }
       }
     }
-    .bookInfo {
+    .productInfo {
       flex-basis: 100px;
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
       text-align: center;
+
       .booksAuthor {
         opacity: 70%;
         font-size: 2.5vw;
@@ -81,11 +83,11 @@
 }
 
 @media screen and (min-width: 400px) {
-  .booksListСontainer {
-    .booksList {
+  .productListСontainer {
+    .productList {
       width: 40%;
       font-size: 2vw;
-      .bookInfo {
+      .productInfo {
         .booksAuthor {
           font-size: 1.8vw;
         }
@@ -94,48 +96,48 @@
   }
 }
 @media screen and (min-width: 500px) {
-  .booksListСontainer {
-    .booksList {
+  .productListСontainer {
+    .productList {
       width: 25%;
       font-size: 2vw;
-      .bookInfo {
+      .productInfo {
         .booksAuthor {
-          font-size: 1.8vw;
+          font-size: 1.6vw;
         }
       }
     }
   }
 }
 @media screen and (min-width: 650px) {
-  .booksListСontainer {
-    .booksList {
-      .bookInfo {
+  .productListСontainer {
+    .productList {
+      .productInfo {
         .booksAuthor {
-          font-size: 1.7vw;
+          font-size: 1.5vw;
         }
       }
     }
   }
 }
 @media screen and (min-width: 800px) {
-  .booksListСontainer {
-    .booksList {
+  .productListСontainer {
+    .productList {
       width: 18%;
       font-size: 1.1vw;
-      .bookInfo {
+      .productInfo {
         .booksAuthor {
-          font-size: 1vw;
+          font-size: 1.1vw;
         }
       }
     }
   }
 }
 @media screen and (min-width: 1000px) {
-  .booksListСontainer {
-    .booksList {
+  .productListСontainer {
+    .productList {
       width: 15%;
       font-size: 1.1vw;
-      .bookInfo {
+      .productInfo {
         .booksAuthor {
           font-size: 1vw;
         }
@@ -144,30 +146,28 @@
   }
 }
 @media screen and (min-width: 1280px) {
-  .booksListСontainer {
-    .booksList {
+  .productListСontainer {
+    .productList {
       width: 15%;
       font-size: 0.9vw;
-      .booksImageContainer {
+      .productImageContainer {
         .favorites_button_container {
           display: none;
         }
       }
-      .bookInfo {
+      .productInfo {
         .booksAuthor {
           font-size: 0.9vw;
         }
-  
         .productButtonContainer {
           display: none;
         }
-
       }
-
       &:hover {
         .favorites_button_container {
           display: flex;
         }
+
         .productButtonContainer {
           display: flex;
         }
