--- a/src/components/Content/ProductsList/ProductsList.module.scss
+++ b/src/components/Content/ProductsList/ProductsList.module.scss
@@ -1,145 +1,139 @@
-.productListСontainer {
+.productsListWrapper {
+  min-height: 100vh;
   display: flex;
-  width: 100%;
   justify-content: center;
-  flex-wrap: wrap;
+  align-items: center;
 
-  .productList {
-    width: 45%;
+  .itemWrapper {
+    min-height: 80vh;
+    width: 60%;
+    box-shadow: 2px 2px 5px 5px rgba(148, 126, 126, 0.425);
+    padding: 1%;
+    border-radius: 20px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    font-family: Inter, sans-serif;
-    margin: 2%;
-    font-size: 3vw;
-    background-color: white;
-    border-radius: 5px;
-    cursor: pointer;
-
-    .productImageContainer {
-      position: relative;
-      width: 80%;
-      .productImage {
-        width: 100%;
-      }
-      display: flex;
-      .favorites_button_container {
-        position: absolute;
-        right: 0;
-      }
-    }
-    .productInfo {
-      flex-basis: 100px;
+    justify-content: space-evenly;
+    .itemImagesContainer {
+      width: 15%;
+      height: 60%;
       display: flex;
       flex-direction: column;
-      justify-content: space-evenly;
-      align-items: center;
-      text-align: center;
-
-      .booksAuthor {
-        opacity: 70%;
-        font-size: 2.5vw;
-      }
-    }
-  }
-  .moreItemsButtonContainer {
-    margin-bottom: 1%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-}
-
-@media screen and (min-width: 400px) {
-  .productListСontainer {
-    .productList {
-      width: 40%;
-      font-size: 2vw;
-      .productInfo{
-        .booksAuthor {
-          font-size: 1.8vw;
+      justify-content: space-between;
+      .itemaImages {
+        margin-top: 5%;
+        opacity: 0.5;
+        width: 100%;
+        &:hover {
+          opacity: 1;
+          transition: 1s;
+          cursor: pointer;
+          border-radius: 5px;
+          box-shadow: 2px 2px 5px 5px rgba(148, 126, 126, 0.425);
         }
       }
     }
-  }
-}
-@media screen and (min-width: 500px) {
-  .productListСontainer {
-    .productList {
-      width: 25%;
-      font-size: 2vw;
-      .productInfo {
-        .booksAuthor {
-          font-size: 1.6vw;
-        }
-      }
-    }
-  }
-}
-@media screen and (min-width: 650px) {
-  .productListСontainer {
-    .productList {
-      .productInfo {
-        .booksAuthor {
-          font-size: 1.5vw;
-        }
-      }
-    }
-  }
-}
-@media screen and (min-width: 800px) {
-  .productListСontainer {
-    .productList {
-      width: 18%;
-      font-size: 1.1vw;
-      .productInfo {
-        .booksAuthor {
-          font-size: 1.1vw;
-        }
-
-      }
-    }
-  }
-}
-@media screen and (min-width: 1000px) {
-  .productListСontainer {
-    .productList {
-      width: 15%;
-      font-size: 1.1vw;
-      .productInfo {
-        .booksAuthor {
-          font-size: 1vw;
-        }
-      }
-    }
-  }
-}
-@media screen and (min-width: 1280px) {
-  .productListСontainer {
-    .productList {
-      width: 15%;
-      font-size: 0.9vw;
-      .productImageContainer {
-        .favorites_button_container {
-          display: none;
-        }
-      }
-      .productInfo {
-        .booksAuthor {
-          font-size: 0.9vw;
-        }
-        .productButtonContainer {
-          display: none;
-        }
+    figure {
+      position: relative;
+      .favorites_button_container {
+        display: none;
       }
       &:hover {
         .favorites_button_container {
+          position: absolute;
+          left: 0;
           display: flex;
         }
+      }
+      width: 40%;
+      .itemImage {
+        width: 100%;
+      }
+      figcaption {
+        width: 95%;
+      }
+    }
+    .itemInfoBlock {
+      width: 30%;
+      max-height: 30vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      .booksAuthor {
+        opacity: 0.7;
+      }
+    }
+  }
+}
 
-        .productButtonContainer {
-          display: flex;
+@media screen and (max-width: 800px) {
+  .productsListWrapper {
+    .itemWrapper {
+      max-height: 40vh;
+      .itemImagesContainer {
+        .itemaImages {
+          &:hover {
+          }
+        }
+      }
+      figure {
+        .itemImage {
+        }
+        figcaption {
+        }
+      }
+      .itemInfoBlock {
+        .booksAuthor {
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 650px) {
+  .productsListWrapper {
+    min-height: 100vh;
+    align-items: flex-start;
+    .itemWrapper {
+      box-shadow: none;
+      min-height: 60vh;
+      width: 100%;
+      margin-top: 2%;
+      .itemImagesContainer {
+        .itemaImages {
+          &:hover {
+          }
+        }
+      }
+      figure {
+        .itemImage {
+        }
+        figcaption {
+        }
+      }
+      .itemInfoBlock {
+        .booksAuthor {
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 500px) {
+  .productsListWrapper {
+    min-height: 80vh;
+    .itemWrapper {
+      min-height: 55vh;
+      .itemImagesContainer {
+        .itemaImages {
+          &:hover {
+          }
+        }
+      }
+      figure {
+        .itemImage {
+        }
+        figcaption {
+        }
+      }
+      .itemInfoBlock {
+        .booksAuthor {
         }
       }
     }
